# pinocchio_counter

./: Cargo.toml  README.md
src/: lib.rs  states.rs
src/instructions/: increment.rs  initialize.rs  mod.rs
tests/: tests.rs
